welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: type mismatch;
 found   : String("2")
 required: Int
	return "2" }
               ^dateFashion:5: error: type mismatch;
 found   : String("0")
 required: Int
	return "0"
               ^dateFashion:7: error: type mismatch;
 found   : String("1")
 required: Int
	return "1"
               ^